--- a/order/package.json
+++ b/order/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.7"
+    "mongoose": "^4.10.7",
+    "socket.io": "^2.0.3"
   }
 }
